crates/shipper-store/src/snapshots/shipper_store__snapshot_tests__directory_layout_after_full_save.snap
---
source: crates/shipper-store/src/lib.rs
expression: layout
---
events.jsonl (size: >0)
receipt.json (size: >0)
state.json (size: >0)
