crates/shipper-store/src/snapshots/shipper_store__snapshot_tests__error_missing_v_prefix.snap
---
source: crates/shipper-store/src/lib.rs
expression: err
---
invalid schema version format: shipper.receipt.2
