crates/shipper-store/src/snapshots/shipper_store__snapshot_tests__error_non_numeric_version.snap
---
source: crates/shipper-store/src/lib.rs
expression: err
---
invalid schema version format: shipper.receipt.vx
