crates/shipper-store/src/snapshots/shipper_store__snapshot_tests__error_version_too_old.snap
---
source: crates/shipper-store/src/lib.rs
expression: err
---
schema version shipper.receipt.v0 is too old. Minimum supported version is shipper.receipt.v1
