crates/shipper-store/src/snapshots/shipper_store__snapshot_tests__event_execution_started.snap
---
source: crates/shipper-store/src/lib.rs
expression: json
---
{
  "timestamp": "2025-01-15T12:00:00Z",
  "event_type": {
    "type": "execution_started"
  },
  "package": "all"
}
