crates/shipper-store/src/snapshots/shipper_store__snapshot_tests__execution_state_single_pending.snap
---
source: crates/shipper-store/src/lib.rs
expression: json
---
{
  "state_version": "shipper.state.v1",
  "plan_id": "plan-abc",
  "registry": {
    "name": "crates-io",
    "api_base": "https://crates.io",
    "index_base": "https://index.crates.io"
  },
  "created_at": "2025-01-15T12:00:00Z",
  "updated_at": "2025-01-15T12:00:00Z",
  "packages": {
    "demo@0.1.0": {
      "name": "demo",
      "version": "0.1.0",
      "attempts": 0,
      "state": {
        "state": "pending"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    }
  }
}
