crates/shipper-store/src/snapshots/shipper_store__snapshot_tests__receipt_some_failed.snap
---
source: crates/shipper-store/src/lib.rs
expression: json
---
{
  "receipt_version": "shipper.receipt.v2",
  "plan_id": "plan-some-fail",
  "registry": {
    "name": "crates-io",
    "api_base": "https://crates.io",
    "index_base": "https://index.crates.io"
  },
  "started_at": "2025-01-15T12:00:00Z",
  "finished_at": "2025-01-15T12:00:00Z",
  "packages": [
    {
      "name": "core",
      "version": "1.0.0",
      "attempts": 1,
      "state": {
        "state": "published"
      },
      "started_at": "2025-01-15T12:00:00Z",
      "finished_at": "2025-01-15T12:00:00Z",
      "duration_ms": 2000,
      "evidence": {
        "attempts": [],
        "readiness_checks": []
      }
    },
    {
      "name": "cli",
      "version": "2.0.0",
      "attempts": 3,
      "state": {
        "state": "failed",
        "class": "permanent",
        "message": "authorization denied"
      },
      "started_at": "2025-01-15T12:00:00Z",
      "finished_at": "2025-01-15T12:00:00Z",
      "duration_ms": 30000,
      "evidence": {
        "attempts": [],
        "readiness_checks": []
      }
    }
  ],
  "event_log_path": ".shipper/events.jsonl",
  "git_context": null,
  "environment": {
    "shipper_version": "0.3.0",
    "cargo_version": null,
    "rust_version": null,
    "os": "linux",
    "arch": "x86_64"
  }
}
